--- a/index.html
+++ b/index.html
@@ -34,5 +34,48 @@
             <span class="shopping-counter">12</span>
         </a>
     </header>
+    <main class="container">
+        <!-- Слайдер -->
+        <div class="slider">
+            <div class="slide slide-summer slide-text-light">
+                <div class="slide-content">
+                    <h2 class="slide-title">Неделя летних овощей</h2>
+                    <p class="slide-text">Специальная овощная корзина. Новые продукты, специальные цены, скидки!</p>
+                    <a href="#" class="button button-primary">Заказать со скидкой</a>
+                </div>
+            </div>
+        </div>
+        <!-- Промо -->
+        <div class="promo">
+            <section class="card card-text-ligth sweet-basket">
+                <img src="img/sweet-basket-min.png" alt="сладкая корзина" class="card-image">
+                <div class="card-header">
+                    <h3 class="card-title">Сладкая корзина</h3>
+                    <p class="card-description">Произвольный выбор десертов по Вашему желанию.</p>
+                </div>
+                <!-- /.card-header -->
+                <div class="card-footer">
+                    <strong class="card-price">ОТ 1 300 ₽</strong>
+                    <span class="card-delivery">стоимость доставки до 200 ₽</span>
+                    <a href="#" class="button button-default">Собрать корзину</a>
+                </div>
+                <!-- /.card-footer -->
+            </section>
+            <section class="card card-text-ligth">
+                <img src="img/minimum.png" alt="сладкая корзина" class="card-image">
+                <div class="card-header">
+                    <h3 class="card-title">Минимум усилий</h3>
+                    <p class="card-description">Произвольный выбор продуктов по Вашему желанию.</p>
+                </div>
+                <!-- /.card-header -->
+                <div class="card-footer">
+                    <strong class="card-price">ОТ 700 ₽</strong>
+                    <span class="card-delivery">стоимость доставки до 200 ₽</span>
+                    <a href="#" class="button button-default">Собрать корзину</a>
+                </div>
+                <!-- /.card-footer -->
+            </section>
+        </div>
+    </main>
 </body>
 </html>
