--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
             <span class="shopping-counter">12</span>
         </a>
     </header>
-    <main class="container">
+    <main>
         <!-- Слайдер -->
-        <div class="slider">
+        <div class="slider container">
             <div class="slide slide-summer slide-text-light">
                 <div class="slide-content">
                     <h2 class="slide-title">Неделя летних овощей</h2>
@@ -45,37 +45,226 @@
                 </div>
             </div>
         </div>
-        <!-- Промо -->
-        <div class="promo">
-            <section class="card card-text-ligth sweet-basket">
-                <img src="img/sweet-basket-min.png" alt="сладкая корзина" class="card-image">
-                <div class="card-header">
-                    <h3 class="card-title">Сладкая корзина</h3>
-                    <p class="card-description">Произвольный выбор десертов по Вашему желанию.</p>
-                </div>
-                <!-- /.card-header -->
-                <div class="card-footer">
-                    <strong class="card-price">ОТ 1 300 ₽</strong>
-                    <span class="card-delivery">стоимость доставки до 200 ₽</span>
-                    <a href="#" class="button button-default">Собрать корзину</a>
-                </div>
-                <!-- /.card-footer -->
-            </section>
-            <section class="card card-text-ligth">
-                <img src="img/minimum.png" alt="сладкая корзина" class="card-image">
-                <div class="card-header">
-                    <h3 class="card-title">Минимум усилий</h3>
-                    <p class="card-description">Произвольный выбор продуктов по Вашему желанию.</p>
-                </div>
-                <!-- /.card-header -->
-                <div class="card-footer">
-                    <strong class="card-price">ОТ 700 ₽</strong>
-                    <span class="card-delivery">стоимость доставки до 200 ₽</span>
-                    <a href="#" class="button button-default">Собрать корзину</a>
-                </div>
-                <!-- /.card-footer -->
-            </section>
+        <div class="container">
+            <!-- Промо -->
+            <div class="promo">
+                <section class="card card-text-ligth sweet-basket">
+                    <img src="img/sweet-basket-min.png" alt="сладкая корзина" class="card-image">
+                    <div class="card-header">
+                        <h3 class="card-title">Сладкая корзина</h3>
+                        <p class="card-description">Произвольный выбор десертов по Вашему желанию.</p>
+                    </div>
+                    <!-- /.card-header -->
+                    <div class="card-footer">
+                        <strong class="card-price">ОТ 1 300 ₽</strong>
+                        <span class="card-delivery">стоимость доставки до 200 ₽</span>
+                        <a href="#" class="button button-default">Собрать корзину</a>
+                    </div>
+                    <!-- /.card-footer -->
+                </section>
+                <section class="card card-text-ligth">
+                    <img src="img/minimum.png" alt="сладкая корзина" class="card-image">
+                    <div class="card-header">
+                        <h3 class="card-title">Минимум усилий</h3>
+                        <p class="card-description">Произвольный выбор продуктов по Вашему желанию.</p>
+                    </div>
+                    <!-- /.card-header -->
+                    <div class="card-footer">
+                        <strong class="card-price">ОТ 700 ₽</strong>
+                        <span class="card-delivery">стоимость доставки до 200 ₽</span>
+                        <a href="#" class="button button-default">Собрать корзину</a>
+                    </div>
+                    <!-- /.card-footer -->
+                </section>
+            </div>
+            <!-- /.promo -->
         </div>
+        <section class="delivery-week container">
+            <h2 class="section-title">Доставка готовой еды на неделю</h2>
+            <div class="delivery-cards">
+                <div class="delivery-card">
+                    <img src="img/cards/card-1.png" alt="" class="delivery-image">
+                    <span class="delivery-tag tag-health">ЗОЖ</span>
+                </div>
+                <!-- /.delivery-card -->
+                <div class="delivery-card">
+                    <img src="img/cards/card-2.png" alt="" class="delivery-image">
+                    <span class="delivery-tag tag-2">Овощное</span>
+                </div>
+                <!-- /.delivery-card -->
+                <div class="delivery-card">
+                    <img src="img/cards/card-3.png" alt="" class="delivery-image">
+                    <span class="delivery-tag tag-3">Мясное</span>
+                </div>
+                <!-- /.delivery-card -->
+                <div class="delivery-card">
+                    <img src="img/cards/card-4.png" alt="" class="delivery-image">
+                    <span class="delivery-tag tag-4">Птица</span>
+                </div>
+                <!-- /.delivery-card -->
+                <div class="delivery-card">
+                    <img src="img/cards/card-5.png" alt="" class="delivery-image">
+                    <span class="delivery-tag tag-5">Рыбное</span>
+                </div>
+                <!-- /.delivery-card -->
+                <div class="delivery-card">
+                    <img src="img/cards/card-6.png" alt="" class="delivery-image">
+                    <span class="delivery-tag tag-6">Детское</span>
+                </div>
+                <!-- /.delivery-card -->
+                <div class="delivery-card">
+                    <img src="img/cards/card-7.png" alt="" class="delivery-image">
+                    <span class="delivery-tag tag-7">Родителям</span>
+                </div>
+                <!-- /.delivery-card -->
+                <div class="delivery-card">
+                    <img src="img/cards/card-8.png" alt="" class="delivery-image">
+                    <span class="delivery-tag tag-8">Праздничное</span>
+                </div>
+                <!-- /.delivery-card -->
+            </div>
+            <!-- /.delivery-cards -->
+        </section>
+        <section class="section-gray category">
+            <div class="container">
+                <h2 class="section-title">Категории блюд</h2>
+                <ul class="tabs">
+                    <li class="tabs-item">
+                        <a href="" class="tabs-link active">Популярные блюда</a>
+                    </li>
+                    <li class="tabs-item">
+                        <a href="" class="tabs-link">Овощное</a>
+                    </li>
+                    <li class="tabs-item">
+                        <a href="" class="tabs-link">Мясное</a>
+                    </li>
+                </ul>
+                <!-- /.tabs -->
+                <div class="tabs-content">
+                    <div class="tabs-card">
+                        <img src="img/tab-image.png" alt="" class="tabs-image">
+                        <div class="tabs-card-content">
+                            <h3 class="tabs-title">Куриные крылья под соусом Терияки</h3>
+                            <p class="tabs-description">Соус Терияки придумали повора из Японии. По традиции его используют в качестве маринада
+                                для...</p>
+                            <div class="tabs-info">
+                                <div class="tabs-good">
+                                    <span class="tabs-price">260 ₽</span>
+                                    <span class="tabs-weigth">500 гр</span>
+                                </div>
+                                <!-- /.tabs-good -->
+                                <button class="button button-outline">В корзину</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="tabs-card">
+                        <img src="img/tab-image.png" alt="" class="tabs-image">
+                        <div class="tabs-card-content">
+                            <h3 class="tabs-title">Куриные крылья под соусом Терияки</h3>
+                            <p class="tabs-description">Соус Терияки придумали повора из Японии. По традиции его используют в качестве
+                                маринада
+                                для...</p>
+                            <div class="tabs-info">
+                                <div class="tabs-good">
+                                    <span class="tabs-price">260 ₽</span>
+                                    <span class="tabs-weigth">500 гр</span>
+                                </div>
+                                <!-- /.tabs-good -->
+                                <button class="button button-outline">В корзину</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="tabs-card">
+                        <img src="img/tab-image.png" alt="" class="tabs-image">
+                        <div class="tabs-card-content">
+                            <h3 class="tabs-title">Куриные крылья под соусом Терияки</h3>
+                            <p class="tabs-description">Соус Терияки придумали повора из Японии. По традиции его используют в качестве
+                                маринада
+                                для...</p>
+                            <div class="tabs-info">
+                                <div class="tabs-good">
+                                    <span class="tabs-price">260 ₽</span>
+                                    <span class="tabs-weigth">500 гр</span>
+                                </div>
+                                <!-- /.tabs-good -->
+                                <button class="button button-outline">В корзину</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="tabs-card">
+                        <img src="img/tab-image.png" alt="" class="tabs-image">
+                        <div class="tabs-card-content">
+                            <h3 class="tabs-title">Куриные крылья под соусом Терияки</h3>
+                            <p class="tabs-description">Соус Терияки придумали повора из Японии. По традиции его используют в качестве
+                                маринада
+                                для...</p>
+                            <div class="tabs-info">
+                                <div class="tabs-good">
+                                    <span class="tabs-price">260 ₽</span>
+                                    <span class="tabs-weigth">500 гр</span>
+                                </div>
+                                <!-- /.tabs-good -->
+                                <button class="button button-outline">В корзину</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- /.tabs-content -->
+                <button class="button button-outline button-center">Больше блюд</button>
+            </div>
+            <!-- /.container -->
+        </section>
+        <!-- /.section-gray category -->
+        <section class="section-benefits container">
+            <h2 class="section-benefits-title">Наши преимущества</h2>
+            <div class="benefits-cards">
+                <div class="benefits-card-item">
+                    <img src="img/benefits/benefit-1.png" alt="" class="benefit-image">
+                    <h3 class="benefit-title">Какой путь проходит ваша еда</h3>
+                    <p class="benefit-description">Вы делаете заказ на коробку
+                    с недельным запасом
+                    полуфабрикатов и готовых блюд
+                    для всей семьи</p>
+                </div>
+                <div class="benefits-card-item">
+                    <img src="img/benefits/benefit-2.png" alt="" class="benefit-image">
+                    <h3 class="benefit-title">Как происходит производство</h3>
+                    <p class="benefit-description">За день до доставки мы сами готовим блюда из натуральных продуктов без консервантов, красителей и гмо</p>
+                </div>
+                <div class="benefits-card-item">
+                    <img src="img/benefits/benefit-3.png" alt="" class="benefit-image">
+                    <h3 class="benefit-title">Высокие стандарты качества</h3>
+                    <p class="benefit-description">Наши повара с многолетним опытом с любовью готовят каждую порцию блюда</p>
+                </div>
+                <div class="benefits-card-item">
+                    <img src="img/benefits/benefit-4.png" alt="" class="benefit-image">
+                    <h3 class="benefit-title">Быстрая и качественная доставка</h3>
+                    <p class="benefit-description">Сами доставим всё прямов
+                    в вашу морозилку, сохранив
+                    температурный режим
+                    и качество наших блюд</p>
+                </div>
+            </div><!-- /.benefits-cards -->
+        </section>
     </main>
+    <footer class="footer">
+        <div class="container">
+            <div class="footer-wrapper">
+                <img width="205" src="img/logo.png" alt="" class="footer-logo">
+                <nav class="footer-nav">
+                    <a href="#" class="footer-link">Доставка и оплата</a>
+                    <a href="#" class="footer-link">Напишите нам</a>
+                </nav>
+                <div class="social-links">
+                    <a href="#" class="social-link"><img src="img/telegram.svg" alt="telegram"></a>
+                    <a href="#" class="social-link"><img src="img/vk.svg" alt="vk"></a>
+                    <a href="#" class="social-link"><img src="img/instagram.svg" alt="instagram"></a>
+                </div>
+                <!-- /.social-links -->
+            </div>
+            <!-- /.footer-wrapper -->
+        </div>
+        <!-- /.container -->
+    </footer>
 </body>
 </html>
